--- a/Switch.Infra.Data/Switch.Infra.Data.csproj
+++ b/Switch.Infra.Data/Switch.Infra.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190703203752_AddIdentificacao.cs" />
+    <Compile Remove="Migrations\20190703203752_AddIdentificacao.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.4">
       <PrivateAssets>all</PrivateAssets>
